forecastService/mlops/k8/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: forecast-api
  namespace: mlops
spec:
  type: NodePort
  selector:
    app: forecast-api
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
      nodePort: 30001
