forecastService/mlops/k8/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: forecast-ingress
  namespace: mlops
  annotations: {}
spec:
  rules:
    - http:
        paths:
          - path: /predict
            pathType: Prefix
            backend:
              service:
                name: forecast-api
                port:
                  number: 8000
